Bug 401334 - No application back-ends found, please report to your distribution error when launching Discover
Summary: No application back-ends found, please report to your distribution error when...
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-11-23 14:22 UTC by Alexander Mentyu
Modified: 2019-01-15 22:57 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.15.0
Sentry Crash Report:


Attachments
Discover when launched with --backends packagekit-backend (104.16 KB, image/png)
2018-12-13 15:02 UTC, Chase Lau
Details
Discover when launched without --backends packagekit-backend (45.66 KB, image/png)
2018-12-13 15:02 UTC, Chase Lau
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Mentyu 2018-11-23 14:22:47 UTC
SOFTWARE/OS VERSIONS
Operating System: KDE neon Developer Edition
KDE Plasma Version: 5.14.80
KDE Frameworks Version: 5.53.0
Qt Version: 5.11.2
Kernel Version: 4.15.0-39-generic
Comment 1 Aleix Pol 2018-11-23 15:16:13 UTC
Can you try running "plasma-discover --list-backends" and tell us what's the output?
Comment 2 Alexander Mentyu 2018-11-23 19:34:40 UTC
(In reply to Aleix Pol from comment #1)
> Can you try running "plasma-discover --list-backends" and tell us what's the
> output?

plasma-discover --listbackends
Available backends:
 * fwupd-backend
 * packagekit-backend
 * flatpak-backend
 * kns-backend
 * snap-backend
Comment 3 Nate Graham 2018-11-26 17:20:29 UTC
Weird, that shouldn't happen when you have those app backends installed.

Can't reproduce on Neon dev unstable myself.
Comment 4 Alexander Mentyu 2018-11-29 15:05:45 UTC
output from console:
plasma-discover 
Using Wayland-EGL
Using the 'xdg-shell-v6' shell integration
file:///usr/lib/x86_64-linux-gnu/qt5/qml/QtQuick/Controls.2/org.kde.desktop/TextField.qml:57:21: Unable to assign [undefined] to QQmlComponent*
adding empty sources model QStandardItemModel(0x55ee8dbdd7a0)
no packages for "org.kde.plasma.systemloadviewer"
no packages for "org.kde.plasma.showActivityManager"
no packages for "org.kde.plasma.grouping"
no packages for "org.kde.plasma.diskquota"
no packages for "org.kde.kscreen"
no packages for "org.kde.plasma.kimpanel"
no packages for "audoban.applet.separator"
no packages for "org.kde.plasma.timer"
no packages for "im.riot.webapp"
no packages for "org.kde.plasma.appmenu"
no packages for "org.kde.plasma.quicklaunch"
invalid kns backend! "/etc/xdg/servicemenu.knsrc" because: "Config group not found! Check your KNS3 installation."
invalid kns backend! "/etc/xdg/ksysguard.knsrc" because: "Config group not found! Check your KNS3 installation."
qml: error No application back-ends found, please report to your distribution.
file:///usr/lib/x86_64-linux-gnu/qt5/qml/org/kde/kirigami.2/templates/AbstractApplicationHeader.qml:113: TypeError: Cannot read property 'globalToolBarItem' of null
file:///usr/lib/x86_64-linux-gnu/qt5/qml/org/kde/kirigami.2/templates/AbstractApplicationHeader.qml:114: TypeError: Cannot read property 'globalToolBarItem' of null
org.kde.plasma.libdiscover: Couldn't find a category for  "fwupd-backend"
Comment 5 Chase Lau 2018-12-12 17:28:05 UTC
Also experiencing this on Neon Dev Unstable. Here's the output of running `plasma-discover`:

~ plasma-discover
invalid kns backend! "/etc/xdg/ksysguard.knsrc" because: "Config group not found! Check your KNS3 installation."
invalid kns backend! "/etc/xdg/servicemenu.knsrc" because: "Config group not found! Check your KNS3 installation."
adding empty sources model QStandardItemModel(0x55c781ba1360)
no packages for "org.kde.plasma.systemloadviewer"
no packages for "timeshift.desktop"
no packages for "org.kde.plasma.showActivityManager"
no packages for "org.kde.plasma.grouping"
no packages for "org.kde.plasma.diskquota"
no packages for "org.kde.kscreen"
no packages for "org.gnupg.scdaemon"
no packages for "org.kde.plasma.kimpanel"
no packages for "audoban.applet.separator"
no packages for "org.kde.plasma.timer"
no packages for "im.riot.webapp"
no packages for "org.kde.plasma.appmenu"
no packages for "org.kde.plasma.quicklaunch"
qml: error No application back-ends found, please report to your distribution.
org.kde.plasma.libdiscover: Couldn't find a category for  "fwupd-backend"
Comment 6 Aleix Pol 2018-12-13 02:44:49 UTC
Alexander, you've been reporting other bugs where you clearly have a backend. What happened here?
Comment 7 Alexander Mentyu 2018-12-13 10:47:40 UTC
I'm reporting bugs of the Discover - it's initially displays 'No application back-ends found...' screen)
Comment 8 Chase Lau 2018-12-13 15:02:09 UTC
Created attachment 116899 [details]
Discover when launched with --backends packagekit-backend
Comment 9 Chase Lau 2018-12-13 15:02:52 UTC
Created attachment 116900 [details]
Discover when launched without --backends packagekit-backend
Comment 10 Chase Lau 2018-12-13 15:06:21 UTC
This appears to be a problem with discover not loading available backends by default. `plasma-discover --listbackends` shows that I do have backends available, and launching with `plasma-discover --backends packkagekit-backend` shows the desired featured screen on launch. 

I've attached screenshots of these behaviors.
Comment 11 Aleix Pol 2018-12-13 17:32:17 UTC
Chase Lau, which distro are you on? Can you run discover from a terminal and show us the output you get?
Comment 12 Chase Lau 2018-12-13 17:34:48 UTC
Aleix,

I'm running KDE Neon Dev Unstable. I posted the output of `plasma-discover` in comment 5
Comment 13 Chase Lau 2018-12-13 17:37:35 UTC
Here's the output from `plasma-discover --backends packagekit-backend`

~ plasma-discover --backends packagekit-backend
adding empty sources model QStandardItemModel(0x55f15472d230)
no packages for "org.kde.plasma.systemloadviewer"
no packages for "timeshift.desktop"
no packages for "org.kde.plasma.showActivityManager"
no packages for "org.kde.plasma.grouping"
no packages for "org.kde.plasma.diskquota"
no packages for "org.kde.kscreen"
no packages for "org.gnupg.scdaemon"
no packages for "org.kde.plasma.kimpanel"
no packages for "audoban.applet.separator"
no packages for "org.kde.plasma.timer"
no packages for "im.riot.webapp"
no packages for "org.kde.plasma.appmenu"
no packages for "org.kde.plasma.quicklaunch"
Could not resolve property : #a
Comment 14 Aleix Pol 2018-12-13 19:02:02 UTC
Looks like a packaging issue.

jr@merkin:~>ldd /usr/lib/x86_64-linux-gnu/qt5/plugins/discover/packagekit-backend.so
        linux-vdso.so.1 (0x00007ffcccbd6000)
        libDiscoverCommon.so => not found
        libpackagekitqt5.so.1 => /usr/lib/x86_64-linux-gnu/libpackagekitqt5.so.1 (0x00007f531a301000)
        libKF5KIOCore.so.5 => /usr/lib/x86_64-linux-gnu/libKF5KIOCore.so.5 (0x00007f5319f7c000)
...
Comment 15 Jonathan Riddell 2018-12-13 23:50:00 UTC
compiling master manually shows this problem.

Running a Git bisect to track it down it says

There are only 'skip'ped commits left to test.
The first bad commit could be any of:
b946520f6b3872d428781da0cc9bfc068d7501c1
c2c5c833c0c73ac9009f00412dfb75c25d8e433a
4c003d441a175a8536b0fdc7a5a403851e43ac54
5aa9988402b30ef7c2aae66cbf23982ea2a024bd
4d1d585e2392e098505ffa7734a25d32bd2e1ead
e81d0d1bca83a61fd4c296939e9378311398eec2
99c93102b1184c35c3e7c2274379456de4a49f23
We cannot bisect more!
Comment 16 Jonathan Riddell 2018-12-13 23:56:39 UTC
Discover does load the backends if I revert commit
b946520f6b3872d428781da0cc9bfc068d7501c1
Comment 17 Aleix Pol 2018-12-17 15:36:36 UTC
That doesn't make much sense, as it means that this from PackageKitBackend returns false:
        bool hasApplications() const override { return true; }
Comment 18 Aleix Pol 2019-01-09 18:22:21 UTC
Can you still see this? This is very weird...
Comment 19 Nate Graham 2019-01-15 22:57:33 UTC
author	Dan Leinir Turthra Jensen <admin@leinir.dk>	2019-01-15 09:18:29 +0000
committer	Dan Leinir Turthra Jensen <admin@leinir.dk>	2019-01-15 09:18:29 +0000
commit	798514c1166823846e64cb8e5ca7608db8051ae3 (patch)
tree	786741f0f923de3c84a335336fdddfd881419c54
parent	b59109351a1e69b045340be3051bdc9161fce059 (diff)
Fix premature firing of allInitialized signal
In case this is in fact the first backend to be added, and also
happens to be pre-filled, we still need for the rest of the
backends to be added before trying to send out the initialized
signal. To ensure this happens, this patch schedules it for the
start of the next run of the event loop, and ensures that it
only happens if there are no more backends to initialise.

Specifically, this happens if e.g. the fwupd backend is the
first to be initialised, and results in (amongst other things)
that the application loads up and insists that there are no
application backends.

Differential Revision: https://phabricator.kde.org/D18246
BUG: 401334
Diffstat
-rw-r--r--	libdiscover/resources/ResourcesModel.cpp	14